# micromouse_pcb_team_2023

./: .gitignore  LICENSE
firmware/: .clang-format  CMakeLists.txt  README
firmware/control/: CMakeLists.txt
firmware/control/include/mouse_control/: constants.hpp  macros.hpp  micromouse.hpp  picosdk.hpp  std.hpp
firmware/control/include/mouse_control/hardware/: drv8835.hpp  icm20602.hpp  ma730.hpp
firmware/control/include/mouse_control/subsystems/: illumination.hpp  subsystem.hpp
firmware/control/src/: micromouse.cpp
firmware/control/src/hardware/: drv8835.cpp  icm20602.cpp  ma730.cpp
firmware/control/src/subsystems/: illumination.cpp
firmware/logic/: CMakeLists.txt
firmware/logic/include/mouse_logic/: flood_fill.hpp  maze.hpp  solver.hpp  std.hpp
firmware/logic/include/mouse_logic/maze/: cell.hpp  coordinate.hpp  direction.hpp  maze.hpp
firmware/logic/include/mouse_logic/solvers/: flood_fill.hpp
firmware/logic/src/: flood_fill.cpp  maze.cpp  solver.cpp
firmware/logic/src/maze/: maze.cpp
firmware/logic/src/solvers/: flood_fill.cpp
firmware/logic/test/: main.cpp
firmware/logic/tests/: test_flood_fill.cpp  test_maze.cpp
firmware/mouselib/: CMakeLists.txt
firmware/mouselib/include/micromouse/: constants.h  constants.hpp  diagnostics.h  drivetrain.h  io.h  macros.h  macros.hpp  micromouse.h  micromouse.hpp  picosdk.hpp  result.h  std.h
firmware/mouselib/include/micromouse/drive/: drivetrain.h
firmware/mouselib/include/micromouse/hardware/: drv8835.h  drv8835.hpp  icm20602.h  icm20602.hpp  ma730.h  ma730.hpp  pwm.h
firmware/mouselib/include/micromouse/util/: util.h
firmware/mouselib/include/micromouse/utils/: general_utils.h
firmware/mouselib/src/: diagnostics.c  drivetrain.c  micromouse.c  micromouse.cpp
firmware/mouselib/src/drive/: drivetrain.c
firmware/mouselib/src/hardware/: drv8835.c  drv8835.cpp  icm20602.c  icm20602.cpp  ma730.c  ma730.cpp  pwm.c
firmware/mouselib/src/util/: util.c
firmware/programs/: CMakeLists.txt
firmware/programs/encoder_test/src/: main.c
firmware/programs/hello/src/: main.c  main.cpp
firmware/programs/imu_test/src/: main.c
firmware/programs/main/src/: main.c  main.cpp
firmware/programs/test_encoders/src/: main.c  main.cpp
firmware/programs/test_imu/src/: main.c  main.cpp
hardware/pcb/: component_symbols.kicad_sym  fp-lib-table  micromouse.kicad_pcb  micromouse.kicad_pro  micromouse.kicad_sch  sym-lib-table
hardware/pcb/component_footprints.pretty/: CAP_GRM155_MUR.kicad_mod  CAP_GRM1885_1P6XP8_MUR.kicad_mod  CAP_GRM21_MUR.kicad_mod  CONN_10118194-0001LF_AMP.kicad_mod  DPAK-3_ONS.kicad_mod  DSS0012A.kicad_mod  ENC_1_A.kicad_mod  ENC_1_B.kicad_mod  ENC_2_A.kicad_mod  ENC_2_B.kicad_mod  IND_BOURNS_SRR4028.kicad_mod  LED_LTST-C191_LTO.kicad_mod  LED_TEFT4300_VIS.kicad_mod  RES_RC0402_YAG.kicad_mod  SFH4550.kicad_mod  SW4_1825910-B_TEC.kicad_mod  TEFT4300.kicad_mod
